templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exemplo
  labels:
    app: exemplo
